# Atlas

./: .gitignore  Build.py  CMakeLists.txt  CMakeOptions.txt  CMakePresets.json  CMakeUserPresets.json  build-linux.sh  build-windows.bat  conanfile.txt  configure.py  generate.py
src/: CMakeLists.txt
src/application/: AngelScriptTest.h  Application.rc  ApplicationUtils.cpp  ApplicationUtils.h  AtlasApp.h  CMakeLists.txt  RCa25320  main.cpp
src/engine/: CMakeLists.txt  Common.cpp  Common.h  Component.cpp  Component.h  DiscordIntegration.h  EReturnCode.h  EngineComponent.h  GameSettings.h  IEngineComponent.h  Project.cpp  Project.h  engine.cpp  engine.h
src/engine/audio/: AudioCommon.h  AudioDevice.cpp  AudioDevice.h  AudioDeviceConfig.h  AudioManager.cpp  AudioManager.h  EAudioDevicePlatform.h  EAudioDeviceType.h
src/engine/components/: CleanupEventArgs.h  Component.cpp  Component.h  ComponentManager.h  ComponentRegistry.h  DestroyEventArgs.h  IComponent.h  ModularObject.h  ObjectPhysicsComponent.h  ObjectRendererComponent.h  PostUpdateEventArgs.h  PreUpdateEventArgs.h  RenderEventArgs.h  RenderingComponent.h  ScriptableComponent.h  TextureEventArgs.h  TransformComponent.cpp  TransformComponent.h  UpdateEventArgs.h
src/engine/conf/: Config.cpp  Config.h  JSONFile.cpp  JSONFile.h  XMLFile.cpp  XMLFile.h
src/engine/core/: ADevice.cpp  AtlasEngine.cpp  AtlasEngine.h  AtlasEngineInitializer.h  BModule.cpp  BModule.h  CommandLineArguments.h  Common.h  CompileTimeCommons.h  Core.h  Device.cpp  Device.h  FrameManager.cpp  FrameManager.h  GameThread.h  IAtlasEngine.h  IAtlasSystem.h  IEventRecorder.cpp  IEventRecorder.h  IFactory.h  IFrameManager.h  IGameThread.h  IModule.cpp  IModule.h  IProject.h  MakeNonCopyable.h  ManagedVariable.h  Math.h  MemoryAllocator.cpp  MemoryAllocator.h  MemoryCounter.cpp  MemoryCounter.h  Module.h  ObjectOptions.h  Platform.cpp  Platform.h  Registry.h  Serializable.h  Task.h  Temporary.h  (+6 more)
src/engine/core/platform/: Platform.cpp  Platform.h  PlatformHardware.h
src/engine/core/threading/: GameThread.cpp  GameThread.h  GameThreadScheduler.cpp  GameThreadScheduler.h  GameThreader.cpp  GameThreader.h  PacedThread.h  ThreadBudget.cpp  ThreadBudget.h  ThreadSafeVariable.h
src/engine/dbg/: Console.cpp  Console.h  Debugger.h  Debugging.h  ELogLevel.h  ELoggingMode.h  Errors.cpp  Errors.h  Logging.cpp  Logging.h
src/engine/dbg/Exceptions/: InvalidComponentName.h
src/engine/debugging/: AException.h  Debugger.cpp  Debugger.h  Logging.cpp  Logging.h
src/engine/fs/: File.cpp  File.h  FileMeta.cpp  FileMeta.h  FilePath.cpp  FilePath.h  FileSystem.cpp  FileSystem.h  FileSystemRegistry.cpp  FileSystemRegistry.h  ISandboxer.h  LoadedFile.h  RegisteredFile.cpp  RegisteredFile.h  Sandboxer.cpp  Sandboxer.h
src/engine/graphics/: AllocatedImage.h  Color.h  DeletionQueue.h  DescriptorLayoutBuilder.h  Frame.cpp  Frame.h  GraphicsUtils.cpp  GraphicsUtils.h  Instance.cpp  Instance.h  Mesh.h  PhysicalDevice.cpp  PhysicalDevice.h  PipelineBuilder.cpp  PipelineBuilder.h  RenderCommon.cpp  RenderCommon.h  Renderer.cpp  Renderer.h  VulkanInstance.cpp  VulkanInstance.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapchain.cpp  VulkanSwapchain.h
src/engine/graphics/backend/: RenderingBackend.cpp  RenderingBackend.h  VKDevice.cpp  VKDevice.h
src/engine/graphics/drawing/: Effect.cpp  Effect.h  EffectManager.cpp  EffectManager.h
src/engine/graphics/gui/: GUIDecorations.h
src/engine/graphics/vulkan/: AllocatedImage.h  DeletionQueue.cpp  DeletionQueue.h  DescriptorLayoutBuilder.cpp  Fence.cpp  Fence.h  PhysicalDevice.cpp  PhysicalDevice.h  PipelineBuilder.h  Semaphore.h  VKDevice.cpp  VKDevice.h  VulkanInstance.cpp  VulkanInstance.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapchain.cpp  (+1 more)
src/engine/haptics/: HapticDevice.cpp  HapticDevice.h  HapticDeviceEffectManager.cpp  HapticDeviceEffectManager.h  HapticEffect.cpp  HapticEffect.h
src/engine/input/: AInputDevice.h  EInputThread.h  EInputTrigger.h  EInputType.h  IInputEventObserver.h  Input.cpp  Input.h  InputAction.cpp  InputAction.h  InputEventObserver.h  InputKey.h  InputRegistry.cpp  InputRegistry.h  SelfDeterminingInputAction.cpp  SelfDeterminingInputAction.h
src/engine/io/: File.cpp  File.h  FileData.cpp  FileData.h  FileHandle.cpp  FileHandle.h  FileRecord.cpp  FileRecord.h  FileSystemMap.h  IOCommon.cpp  IOCommon.h  IOManager.cpp  IOManager.h  Parser.h  PathLocation.h  PathSearcher.cpp  PathSearcher.h
src/engine/language/: Language.h  LocalizationRegistry.h  LocalizedObject.h
src/engine/math/: Transform.cpp  Transform.h  Vec3.cpp  Vec3.h  Vector.h
src/engine/modding/: DynamicObject.h  IScript.h  IScriptingLanguageInitializer.h  Mod.cpp  Mod.h  ModManager.cpp  ModManager.h  ScriptingAPI.cpp  ScriptingAPI.h
src/engine/objects/: GameObject.cpp  GameObject.h  GameObjectRegistry.cpp  GameObjectRegistry.h  IGameObject.h  PhysicsObject.h
src/engine/performance/: PerformanceTest.h
src/engine/physics/: Layers.cpp  Layers.h  Listeners.cpp  Listeners.h  Physics.cpp  Physics.h
src/engine/project/: IProjectInitializer.h  IProjectSettings.h  ProjectManager.h
src/engine/renderer/: ERenderLayerDrawTime.h  Entity.h  GameCamera.cpp  GameCamera.h  GameModel.cpp  GameModel.h  GameObject.h  GameUI.cpp  GameUI.h  ICuller.h  IDrawable.h  IEntity.h  IGameObject.h  IGameObjectGate.h  IRenderLayer.h  IRenderer.h  PhysicsObject.h  RenderLayer.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  WindowDecorations.h
src/engine/scripting/: ScriptedObject.cpp  ScriptedObject.h
src/engine/states/: IStateMachine.cpp  IStateMachine.h  State.h
src/engine/system/: Memory.h  OS.cpp  OS.h  PhysicalDevice.h  PlatformInfo.h
src/engine/utils/: DoublyLinkedList.h  Gate.h  Globals.h  MiscUtils.h  OptionalReference.h  Singleton.h  ValidityCheckResult.h
src/engine/world/: IChunk.h  IWorldGenerator.h  world.h
src/project/: CMakeLists.txt  project.cpp  project.h
src/project/samples/: SampleGroup.h  SamplesProject.h
src/tests/: AtlasUnitTests.cpp  CMakeLists.txt  main.cpp
src/tests/renderer/: RendererTests.cpp
(+7168 files in other folders)
